	  support/regression/tests/gcc-torture-execute-20060127-1.c,
	  support/regression/tests/gcc-torture-execute-941015-1.c,
	  support/regression/tests/gcc-torture-execute-950512-1.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c,
	  support/regression/tests/gcc-torture-execute-960402-1.c,
	  support/regression/tests/gcc-torture-execute-960801-1.c,
	  support/regression/tests/gcc-torture-execute-20000717-2.c:
	  Fix mcs51 peephole handling of long long parameters.

2016-08-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  support/regression/tests/gcc-torture-execute-20020508-?.c:
	  Fix long long right shift for mcs51.

2016-08-25 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/_strchr.c:
	  Explicitly cast away const to silence a warning.
	* support/regression/tests/gcc-torture-execute-20020508-?.c:
	  Disable some failing long long tests for mcs51.
	* src/mcs51/gen.c:
	  Fix pushing of long long received parameters for mcs51.

2016-08-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* device/include/math.h
	* device/lib/Makefile.in
	* device/lib/incl.mk
	* device/lib/isinf.c
	* device/lib/isnan.c
	* device/lib/make51lib.bat
	  Support of new library functions isnan() and isinf().
	* src/SDCCval.c
	* device/lib/_fsdiv.c
	  Make float division more compitable with inf and nan results.
	* src/SDCCast.c
	* src/SDCCerr.c
	  Change zero-div from error to warning level.
	* support/regression/tests/bug-2516.c 
	  Add a new test case for inf and nan.

2016-08-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.h,
	  src/mcs51/peep.c,
	  support/regression/tests/gcc-torture-execute-20000314-2.c,
	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
	  support/regression/tests/gcc-torture-execute-20060110-2.c,
	  support/regression/tests/gcc-torture-execute-20001031-1.c,
	  support/regression/tests/gcc-torture-execute-20011126-1.c,
	  support/regression/tests/gcc-torture-execute-20020201-1.c,