@@ -298,7 +298,7 @@ test8 (unsigned long long l, int set)
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_mcs51) && defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   test1 (0, 0);
   test1 (SCHAR_MAX, 0);
   test1 (SCHAR_MIN, 1);
