@@ -35,7 +35,7 @@ void
 testTortureExecute (void)
 {
 // Some ports do not yet support long long
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 #if !defined(__SDCC_hc08) && !defined(__SDCC_s08)
   if (sizeof (long long) != 8)
     return;
